# FFZKit

./: .gitignore  CMakeLists.txt  Readme.md  dockerfile
.github/workflows/: linux.yml
src/Network/: Buffer.cpp  Buffer.h  BufferSock.cpp  BufferSock.h  Socket.cpp  Socket.h  sockutil.cpp  sockutil.h
src/Poller/: EventPoller.cpp  EventPoller.h  Pipe.cpp  Pipe.h  PipeWrap.cpp  PipeWrap.h  SelectWrap.cpp  SelectWrap.h
src/Thread/: TaskExecutor.cpp  TaskExecutor.h  TaskQueue.h  ThreadGroup.h  ThreadPool.h  semaphore.h
src/Util/: CMD.cpp  CMD.h  File.cpp  File.h  List.h  NoticeCenter.cpp  NoticeCenter.h  ResourcePool.h  SpeedStatistic.h  TimeTicker.h  function_traits.h  local_time.cpp  local_time.h  logger.cpp  logger.h  mini.cpp  mini.h  onceToken.h  util.cpp  util.h  uv_errno.cpp  uv_errno.h
tests/: CMakeLists.txt  test_creator.cpp  test_ini.cpp  test_logger.cpp  test_noticeCenter.cpp  test_pipe.cpp  test_resourcePool.cpp  test_semaphore.cpp  test_threadPool.cpp  test_threadPoolBenchmark.cpp  test_variant.cpp
